changing file host service

--- a/src/app/admin/document/views/list.html
+++ b/src/app/admin/document/views/list.html
@@ -21,14 +21,14 @@
     	</div>
 
     	<div class="col-md-7">
-    		<ng-pdf template-url="app/components/partials/viewer.html" scale="page-fit"></ng-pdf>
+    		<ng-pdf template-url="/app/components/partials/viewer.html" scale="page-fit"></ng-pdf>
     	</div>
     </div>
     
 <div class="col-md-12" ng-if="admin.debug">
 	<div class="col-md-6">
 		<pre>
-	 		{{ vm.pdfUrl | json }}
+	 		{{ pdfUrl | json }}
 		</pre>
 	</div>
 	
