--- a/src/app/admin/guide/views/form.html
+++ b/src/app/admin/guide/views/form.html
@@ -147,7 +147,7 @@
 	                				ng-class="{
 	                					'has-error': GuideForm.file.$invalid && GuideForm.file.$dirty && vm.hasStandard }">
 	                				<label class="control-label">File Dokumen Pedoman Mutu</label>&nbsp;<label style="color: #a94442;">*</label>
-	                				<input type="file" name="file" class="form-control" ngf-select accept="*" 
+	                				<input type="file" name="file" class="form-control" ngf-select ngf-max-size="100MB" accept="*" 
 	                					ng-model="vm.input.file" ng-required="vm.requiredUpload" ng-disabled="!vm.hasStandard || !vm.input.standard_document_id">
 	                				<span class="form-control-feedback" 
   										ng-show="GuideForm.file.$dirty && vm.hasStandard" aria-hidden="true">
@@ -159,7 +159,7 @@
   										ng-if="GuideForm.file.$dirty && vm.hasStandard">
 								        <small ng-message="required">* Document terkait harus dilampirkan.</small>
 								    </div>
-								    <small ng-show="vm.input.document"><a target="_blank" ng-href="{{ $root.API_HOST }}/upload/guide/{{ vm.input.document }}">* {{ vm.input.document }}</a></small>
+								    <small ng-show="vm.input.document"><a target="_blank" ng-href="{{ $root.FILE_HOST }}/upload/guide/{{ vm.input.document }}">* {{ vm.input.document }}</a></small>
 	                			</div>
 
 	                		</form>
