--- a/src/app/admin/project/views/modal.html
+++ b/src/app/admin/project/views/modal.html
@@ -27,7 +27,7 @@
 
                 <div class="form-group has-feedback" ng-class="{
                     'has-error': ModalProjectForm.description.$invalid && ModalProjectForm.description.$dirty }">
-                    <label class="control-label">Nama Sub Project</label>&nbsp;<label style="color: #a94442;">*</label>
+                    <label class="control-label">Deskripsi Sub Project</label>&nbsp;<label style="color: #a94442;">*</label>
                     <textarea name="description" class="form-control" ng-model="input.description" ng-required="true"></textarea>
                     <span class="form-control-feedback" aria-hidden="true">
                         <i class="fa" ng-class="{ 
@@ -44,6 +44,7 @@
         </div>
     </div>
 </div>
+ 
 <div ng-show="debug">
 {{ input }}
 </div>
