--- a/src/app/admin/work/views/form.html
+++ b/src/app/admin/work/views/form.html
@@ -340,7 +340,7 @@
 					                                <td>{{ object.no }}</td>
 					                                <td>{{ object.description }}</td>
 					                                <td>
-					                                	<a ng-disabled="!object.document" ng-href="{{ $root.API_HOST }}/upload/form/{{ object.document }}" class="btn btn-info btn-xs" target="_blank">
+					                                	<a ng-disabled="!object.document" ng-href="{{ $root.FILE_HOST }}/upload/form/{{ object.document }}" class="btn btn-info btn-xs" target="_blank">
 					                                		<i class="fa fa-arrow-down"></i>
 					                                	</a>&nbsp;|&nbsp;<a ng-click="vm.update(object, $index)" class="btn btn-success btn-xs">
 					                                		<i class="fa fa-edit"></i>
