--- a/src/app/admin/instruction/views/form.html
+++ b/src/app/admin/instruction/views/form.html
@@ -179,7 +179,7 @@
 	                				ng-class="{
 	                					'has-error': InstructionForm.file.$invalid && InstructionForm.file.$dirty && vm.input.guide_id }">
 	                				<label class="control-label">File Instruksi Kerja (SOP)</label>&nbsp;<label style="color: #a94442;">*</label>
-	                				<input type="file" name="file" class="form-control" ngf-select accept="*" 
+	                				<input type="file" name="file" class="form-control" ngf-select ngf-max-size="100MB" accept="*" 
 	                					ng-model="vm.input.file" ng-required="vm.requiredUpload" ng-disabled="!vm.hasStandard || !vm.input.guide_id">
 	                				<span class="form-control-feedback" 
   										ng-show="InstructionForm.file.$dirty" aria-hidden="true">
@@ -191,7 +191,7 @@
   										ng-if="InstructionForm.file.$dirty && vm.input.guide_id">
 								        <small ng-message="required">* Document terkait harus dilampirkan.</small>
 								    </div>
-								    <small ng-show="vm.input.document"><a target="_blank" ng-href="{{ $root.API_HOST }}/upload/instruction/{{ vm.input.document }}">* {{ vm.input.document }}</a></small>
+								    <small ng-show="vm.input.document"><a target="_blank" ng-href="{{ $root.FILE_HOST }}/upload/instruction/{{ vm.input.document }}">* {{ vm.input.document }}</a></small>
 	                			</div>
 
 	                		</form>
