--- a/src/app/admin/instruction/views/list.html
+++ b/src/app/admin/instruction/views/list.html
@@ -49,7 +49,7 @@
 	                                <td>{{ object.no }}</td>
 	                                <td>{{ object.description }}</td>
 	                                <td>
-                                        <a ng-disabled="!object.document" ng-href="{{ $root.API_HOST }}/upload/instruction/{{ object.document }}" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-arrow-down"></i></a>&nbsp;|
+                                        <a ng-disabled="!object.document" ng-href="{{ $root.FILE_HOST }}/upload/instruction/{{ object.document }}" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-arrow-down"></i></a>&nbsp;|
                                         <a ng-click="vm.update(object.id)" class="btn btn-success btn-xs"><i class="fa fa-edit"></i></a>&nbsp;|
                                         <a ng-click="vm.destroy(object.id, $index)" class="btn btn-danger btn-xs"><i class="fa fa-close"></i></a></td>
 	                            </tr>
