--- a/src/app/user/project/views/upload.html
+++ b/src/app/user/project/views/upload.html
@@ -28,7 +28,7 @@
 				    						<p>{{vm.form.project_form.project_node.description }}</p>
 				    					<label class="control-label">Form</label><br/>
 			    						<div class="pull-left">
-			    							<p>{{ vm.form.form.description }}&nbsp;<a ng-disabled="!object.document" ng-href="{{ $root.API_HOST }}/upload/form/{{ object.document }}" popover="Download Form" popover-trigger="mouseenter" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-arrow-down"></i></a></p>
+			    							<p>{{ vm.form.form.description }}&nbsp;<a ng-disabled="!vm.form.form.document" ng-href="{{ $root.FILE_HOST }}/upload/form/{{ vm.form.form.document }}" popover="Download Form" popover-trigger="mouseenter" class="btn btn-info btn-xs" target="_blank"><i class="fa fa-arrow-down"></i></a></p>
 			    						</div>
 		    						</div>
 		    					</div>
@@ -40,7 +40,7 @@
 					
 						            <div class="panel-body">
 					              		<div class="list-group">
-									    	<a ng-repeat="object in vm.form.uploads | orderBy:vm.sortField:vm.reverse" ng-href="{{ $root.API_HOST }}/upload/project/{{ object.upload }}" target="_blank" class="list-group-item">
+									    	<a ng-repeat="object in vm.form.uploads | orderBy:vm.sortField:vm.reverse" ng-href="{{ $root.FILE_HOST }}/upload/project/{{ object.upload }}" target="_blank" class="list-group-item">
 									        	<i class="fa fa-file"></i>&nbsp;{{ object.users.name }}
 									        	<span class="pull-right">{{ object.created_at | date: 'dd-MM-yyyy hh:mm' }}</span>
 									        </a>
@@ -49,7 +49,7 @@
 						            
 						            <div ng-if="vm.project.status == 1 || vm.project.status == 2" class="panel-footer clearfix">
 						            	<div class="form-inline pull-right">
-		                					<input type="file" class="form-control" ngf-select accept="*" ng-model="vm.input.file" name="file">
+		                					<input type="file" class="form-control" ngf-select ngf-max-size="100MB" accept="*" ng-model="vm.input.file" name="file">
 											<button ng-click="vm.upload()" class="btn btn-primary"><i class="fa fa-save"></i></button>
 	                					</div>
 						            </div>
