--- a/src/app/admin/project/views/detail.html
+++ b/src/app/admin/project/views/detail.html
@@ -20,10 +20,30 @@
 	                                        <h4>Informasi Project</h4>
 	                                    </div>
 	                                </div>
-	
+                                    
 	                                <div class="panel-body">
 	                                    <div class="row">
-	                                        <div class="col-md-12">
+                                            <div ng-if="!vm.canModifyProject" class="col-md-12">
+                                                <div class="form-group has-feedback">
+                                                    <label class="control-label">Nama Project</label><br/>
+                                                    {{ vm.input.name }}
+                                                </div>
+                                                <div class="form-group has-feedback">
+                                                    <label class="control-label">Deskripsi Project</label><br/>
+                                                    {{ vm.input.description }}
+                                                </div>
+                                                <div class="form-group has-feedback">
+                                                    <label class="control-label">Berlaku Mulai</label><br/>
+                                                    {{ vm.input.start | date: 'dd-MM-yyyy' }}
+                                                </div>
+    
+                                                <div class="form-group has-feedback">
+                                                    <label class="control-label">Berakhir hingga</label><br/>
+                                                    {{ vm.input.ended | date: 'dd-MM-yyyy' }}
+                                                </div>
+                                            </div>
+                                        
+	                                        <div ng-if="vm.canModifyProject" class="col-md-12">
 	                                            <div class="form-group has-feedback"
 	                                            	ng-class="{
 	                                            		'has-error': ProjectForm.name.$invalid && ProjectForm.name.$dirty }">
@@ -93,7 +113,7 @@
 	                                    <div class="panel-title pull-left">
 	                                        <h4>Project Member</h4>
 	                                    </div>
-	                                    <div class="panel-title pull-right" ng-if="vm.phase == '1' || vm.phase == '2' || vm.phase == '3' || vm.phase == '4'">
+	                                    <div class="panel-title pull-right" ng-if="vm.canAddMember">
 	                                       <button ng-click="vm.addProjectMember()" class="btn btn-primary" popover="Add New Member" popover-trigger="mouseenter"><i class="fa fa-plus"></i></button>
 	                                    </div>
 	                                </div>
@@ -112,13 +132,13 @@
 	                                                <tr ng-repeat="object in vm.users | filter:query | orderBy:sortField:reverse track by $index">
 	                                                    <td>{{ $index + 1 }}</td>
 	                                                    <td>
-                                                            <a ng-if="vm.phase == '1' || vm.phase == '2' || vm.phase == '3' || vm.phase == '4'" href="" ng-click="vm.setLeader(object)">
+                                                            <a ng-if="vm.canChangeLeader" href="" ng-click="vm.setLeader(object)">
                                                                 <i class="fa" ng-class="{
                                                                     'fa-star-o': object.leader == false,
                                                                     'fa-star': object.leader == true}">
                                                                 </i>
                                                             </a>
-                                                            <a ng-if="!(vm.phase == '1' || vm.phase == '2' || vm.phase == '3' || vm.phase == '4')">
+                                                            <a ng-if="!vm.canChangeLeader">
                                                                 <i class="fa" ng-class="{
                                                                     'fa-star-o': object.leader == false,
                                                                     'fa-star': object.leader == true}">
@@ -136,7 +156,7 @@
 	                        </div>
 	
 	                        <div class="col-md-12">
-	                           <node-list ng-model="vm.projects" users="vm.users" phase="vm.phase" node-controller="NodeProjectController"></node-list>
+	                           <node-list ng-model="vm.projects" users="vm.users" setting="vm.setting" node-controller="NodeProjectController"></node-list>
 	                        </div>
 	                    </div>
 	                    <hr/>
