--- a/src/app/admin/project/views/detail.html
+++ b/src/app/admin/project/views/detail.html
@@ -3,6 +3,7 @@
         <div class="col-lg-12">
             <h1 class="page-header">Project</h1>
         </div>
+        
     </div>
 
     <div class="row">
@@ -25,25 +26,20 @@
                                         <div class="panel-body">
                                             <div class="row">
                                                 <div ng-if="!vm.canModifyProject" class="col-md-12">
-                                                    <div class="form-group has-feedback">
+                                                    <div class="form-group">
                                                         <label class="control-label">Nama Project</label><br/>
                                                         {{ vm.input.name }}
                                                     </div>
-                                                    <div class="form-group has-feedback">
+                                                    <div class="form-group">
                                                         <label class="control-label">Deskripsi Project</label><br/>
                                                         {{ vm.input.description }}
                                                     </div>
-                                                    <div class="form-group has-feedback">
-                                                        <label class="control-label">Berlaku Mulai</label><br/>
-                                                        {{ vm.input.start | date: 'dd-MM-yyyy' }}
-                                                    </div>
-        
-                                                    <div class="form-group has-feedback">
-                                                        <label class="control-label">Berakhir hingga</label><br/>
-                                                        {{ vm.input.ended | date: 'dd-MM-yyyy' }}
+                                                    <div class="form-group">
+                                                        <label class="control-label">Periode</label><br/>
+                                                        {{ vm.input.start | date: 'dd-MM-yyyy' }}&nbsp;s/d&nbsp;{{ vm.input.ended | date: 'dd-MM-yyyy' }}
                                                     </div>
                                                     
-                                                    <div class="form-group has-feedback">
+                                                    <div class="form-group">
                                                         <label class="control-label">Project Assessment Type</label><br/>
                                                         {{ (vm.input.type == 'f') ? 'Full Assessment' : 'Partial Assessment' }}
                                                     </div>
@@ -133,7 +129,7 @@
                                         </div>
                                     </div>
                                     
-                                    <div ng-if="!vm.setting.editableNode">
+                                    <div ng-if="vm.showAllocation">
                                         <div class="panel panel-default">
                                             <div class="panel-heading clearfix">
                                                 <div class="panel-title pull-left">
@@ -239,6 +235,29 @@
                        
                        <div class="row">
 	                        <div class="col-md-12">
+                                <div>
+                                    <button class="btn" ng-class="{
+                                        'btn-warning': vm.status.code == '0',
+                                        'btn-default': vm.status.code == '1',
+                                        'btn-info': vm.status.code == '2',
+                                        'btn-primary': vm.status.code == '3',
+                                        'btn-success': vm.status.code == '4',
+                                        'btn-danger': vm.status.code == '5'}">
+                                        {{ vm.status.text }}
+                                    </button>&nbsp;
+                                    <button ng-if="vm.input.score" class="btn" ng-class="{
+                                        'btn-success': vm.input.score >= 3.5,
+                                        'btn-primary': vm.input.score < 3.5 && vm.input.score >= 2.5,
+                                        'btn-warning': vm.input.score < 2.5 && vm.input.score >= 1.5,
+                                        'btn-danger': vm.input.score < 1.5 }">{{ vm.input.score | number : 2 }}
+                                    </button>&nbsp;
+                                    <button class="btn btn-warning" ng-click="vm.lock()">
+                                        <i class="fa" ng-class="{
+                                            'fa-lock': vm.input.type_status == '1',
+                                            'fa-unlock-alt': vm.input.type_status == '0' }"></i>
+                                    </button>
+                                </div>
+                                
 	                           <node-list ng-model="vm.projects" users="vm.users" assessors="vm.assessors" setting="vm.setting" node-controller="NodeProjectController"></node-list>
 	                        </div>
 	                    </div>
@@ -284,6 +303,6 @@
     </div>
     
 <pre ng-if="admin.debug || user.debug">
-    {{ vm.input.projects | json }}
+    {{ vm.input | json }}
 </pre>
 
