--- a/src/app/components/pages/error.html
+++ b/src/app/components/pages/error.html
@@ -15,6 +15,13 @@
                 <p>Mohon maaf, terjadi kesalahan pada server. Silahkan kontak administrator untuk info lebih lanjut. Terima kasih</p>
             </div>
         </div>
+        
+         <div class="row">
+            <div class="col-lg-12">
+                <h2>{{ alert.header }}</h2>
+                <p>{{ alert.message }}</p>
+            </div>
+        </div>
 
 
     </div>
