--- a/src/app/components/pages/information.html
+++ b/src/app/components/pages/information.html
@@ -12,7 +12,7 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <p>Kami telah mengirimkan email permintaan autentikasi user melalui email Anda <a href="">{{ $root.CURRENT_USER.email }}</a>. Apablia anda belum menerima email dari kami, <a href="">kirim ulang</a>. Bila Anda ingin menggunakan user yang lain, silahkan <a href="" ng-click="logout()">Log Out</a></p>
+                <p>Kami telah mengirimkan email permintaan autentikasi user melalui email Anda <a href="">{{ $root.CURRENT_USER.email }}</a>. Apablia anda belum menerima email dari kami, <a href="" ng-click="resend()">kirim ulang</a>. Bila Anda ingin menggunakan user yang lain, silahkan <a href="" ng-click="logout()">Log Out</a></p>
             </div>
         </div>
 
